--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   shared_preferences: ^2.0.15
+  smooth_page_indicator: ^1.0.0+2
 
 dev_dependencies:
   flutter_test:
